--- a/tools/inference.ipynb
+++ b/tools/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0a3b5c39d8d43d9ba71492c2afadbc6",
+       "model_id": "90e9977e37cd4752b084369d0832a617",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,6 +25,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You have disabled the safety checker for <class 'diffusers.pipelines.stable_diffusion.pipeline_stable_diffusion_instruct_pix2pix.StableDiffusionInstructPix2PixPipeline'> by passing `safety_checker=None`. Ensure that you abide to the conditions of the Stable Diffusion license and do not expose unfiltered results in services or applications open to the public. Both the diffusers team and Hugging Face strongly recommend to keep the safety filter enabled in all public facing circumstances, disabling it only for use-cases that involve analyzing network behavior or auditing its results. For more information, please have a look at https://github.com/huggingface/diffusers/pull/254 .\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
     }
    ],
    "source": [
@@ -56,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c9db16366f3427fb2316dbe8256137a",
+       "model_id": "f75a0e5d74f348f69d648aefd880157f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,16 +88,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Potential NSFW content was detected in one or more images. A black image will be returned instead. Try again with a different prompt and/or seed.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c46ce30ea0b4fedabc4fb3f5f6f3bab",
+       "model_id": "fbb4567686a349f49adb96083ca90704",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,16 +102,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Potential NSFW content was detected in one or more images. A black image will be returned instead. Try again with a different prompt and/or seed.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0444173b21ff460f9bbfbffde202379e",
+       "model_id": "611bdd51ee2b48c5aa980f79d9c8183a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,7 +118,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d9e5ff8f43a47c08b9dcb45b207ba7d",
+       "model_id": "083f24edc71645b997abe978cb096265",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,16 +130,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Potential NSFW content was detected in one or more images. A black image will be returned instead. Try again with a different prompt and/or seed.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1502724aea214efba8e077c9d16d26a8",
+       "model_id": "bbb1dc199ba947debb964fa3a7d70328",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5334b182ad15478ca5c90f6b9f4437e3",
+       "model_id": "0cc9eadd903845b4987b2fbd1a3010af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,56 +158,14 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Potential NSFW content was detected in one or more images. A black image will be returned instead. Try again with a different prompt and/or seed.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6e0ea9568074999a236e03e55559d45",
+       "model_id": "b56881f1515845b0b15060537480adba",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "  0%|          | 0/140 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "876b5b16df0141f393ff52fbcab678e0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/160 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Potential NSFW content was detected in one or more images. A black image will be returned instead. Try again with a different prompt and/or seed.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f626663edffa4334ab6bf5444b683ffa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/180 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -239,28 +190,33 @@
     "# init_image = init_image.resize((768, 512))\n",
     "\n",
     "# prompt = prompts[\"h2uhm\"]\n",
-    "prompt = \"modify the image by inserting one brain lesion within the MRI image, and highlight the brain lesion in bright red color.\"\n",
+    "prompt = \"modify the image by inserting brain lesions within the MRI image, and highlight the brain lesions in bright red color.\"\n",
     "\n",
     "generator = torch.Generator(\"cuda\").manual_seed(40)\n",
     "\n",
     "\n",
     "start_steps = 20\n",
-    "max_num_inference_steps = 200\n",
+    "max_num_inference_steps = 160\n",
     "os.system(\"rm -rf ./viz/\")\n",
     "os.system(\"mkdir ./viz/\")\n",
+    "\n",
+    "steps=80\n",
+    "guidance_scale = 5.5\n",
+    "image_guidance_scale = 7.0\n",
     "for steps in range(start_steps, max_num_inference_steps, 20):\n",
+    "#     for guidance_scale in range(2, 15):\n",
     "    healthy_output_file = os.path.basename(image_filename)\n",
     "    output_path = f\"./viz/{healthy_output_file}\"\n",
     "    init_image.save(output_path)\n",
-    "    \n",
+    "\n",
     "    images = pipe(prompt, image=init_image,\n",
-    "                  num_inference_steps = steps,\n",
-    "                  image_guidance_scale = 5,\n",
-    "                  guidance_scale = 1,\n",
-    "                  num_images_per_prompt=1,\n",
-    "                  generator=generator).images\n",
+    "          num_inference_steps = steps,\n",
+    "          image_guidance_scale = image_guidance_scale,\n",
+    "          guidance_scale = guidance_scale,\n",
+    "          num_images_per_prompt=1,\n",
+    "          generator=generator).images\n",
     "    for idx, image in enumerate(images):\n",
-    "        pred_output_path = f\"./viz/{os.path.splitext(os.path.basename(image_filename))[0]}-generated-{idx}-step-{steps}.jpg\"\n",
+    "        pred_output_path = f\"./viz/{os.path.splitext(os.path.basename(image_filename))[0]}-generated-{idx}-step-{steps}-guiding-scale-{guidance_scale}.jpg\"\n",
     "        image.save(pred_output_path)"
    ]
   },
@@ -273,17 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Video created successfully at ./viz/video-3.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
